# Prot2Prot

./: .gitignore  README.md  aggregate_data.py  inference.py  pyproject.toml  train.py
